// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SmartList /> should render a headerless Smart List displaying the right data with the right title 1`] = `
<SmartList
  cursor="auto"
  data={
    Array [
      Object {
        "expiryDate": "11 Nov 2004",
        "issuingOrganisation": "Queensland Gov.",
        "name": "Blue Card",
        "status": "Expired",
      },
      Object {
        "expiryDate": "05 Feb 2017",
        "issuingOrganisation": "Western Australia Gov.",
        "name": "Green Card",
        "status": "Current",
      },
    ]
  }
  emptyListText="No Results found."
  hideHeaderOnSmall={false}
  id="test-smart-list"
  limit={5}
  loading={false}
  showHeaderRow={true}
  showHoverBg={true}
  title="My List Title"
>
  <div
    className="SmartList smart-list hover-bg"
  >
    <div
      className="list-title"
    >
      My List Title
    </div>
    <div
      className="header-row grid-x grid-padding-x"
    >
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={0}
        data={
          Array [
            Object {
              "expiryDate": "11 Nov 2004",
              "issuingOrganisation": "Queensland Gov.",
              "name": "Blue Card",
              "status": "Expired",
            },
            Object {
              "expiryDate": "05 Feb 2017",
              "issuingOrganisation": "Western Australia Gov.",
              "name": "Green Card",
              "status": "Current",
            },
          ]
        }
        header=""
        isHeader={true}
        key="test-smart-list-list-item-0-0"
        rowIndex={0}
        size={6}
      >
        <div
          className="list-column cell small-6"
        >
          <ListHeader
            label=""
          />
        </div>
      </ListColumn>
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={1}
        data={
          Array [
            Object {
              "expiryDate": "11 Nov 2004",
              "issuingOrganisation": "Queensland Gov.",
              "name": "Blue Card",
              "status": "Expired",
            },
            Object {
              "expiryDate": "05 Feb 2017",
              "issuingOrganisation": "Western Australia Gov.",
              "name": "Green Card",
              "status": "Current",
            },
          ]
        }
        header=""
        isHeader={true}
        key="test-smart-list-list-item-0-1"
        rowIndex={0}
        size={3}
      >
        <div
          className="list-column cell small-3"
        >
          <ListHeader
            label=""
          />
        </div>
      </ListColumn>
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={2}
        data={
          Array [
            Object {
              "expiryDate": "11 Nov 2004",
              "issuingOrganisation": "Queensland Gov.",
              "name": "Blue Card",
              "status": "Expired",
            },
            Object {
              "expiryDate": "05 Feb 2017",
              "issuingOrganisation": "Western Australia Gov.",
              "name": "Green Card",
              "status": "Current",
            },
          ]
        }
        header=""
        isHeader={true}
        key="test-smart-list-list-item-0-2"
        rowIndex={0}
        size={3}
      >
        <div
          className="list-column cell small-3"
        >
          <ListHeader
            label=""
          />
        </div>
      </ListColumn>
    </div>
    <div
      className="smart-list-rows"
    >
      <ListRow
        cursor="auto"
        data={
          Object {
            "expiryDate": "11 Nov 2004",
            "issuingOrganisation": "Queensland Gov.",
            "name": "Blue Card",
            "status": "Expired",
          }
        }
        handleClick={[Function]}
        hideRow={false}
        index={0}
        key="test-smart-list-list-row-0"
      >
        <div
          className="item-row cursor-auto grid-x grid-padding-x"
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={0}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header=""
            isHeader={false}
            key="test-smart-list-list-item-0-0"
            rowIndex={0}
            size={6}
          >
            <div
              className="list-column cell small-6"
            >
              <div>
                <b>
                  Blue Card
                </b>
                <div>
                  Queensland Gov.
                </div>
              </div>
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={1}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header=""
            isHeader={false}
            key="test-smart-list-list-item-0-1"
            rowIndex={0}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              11 Nov 2004
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={2}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header=""
            isHeader={false}
            key="test-smart-list-list-item-0-2"
            rowIndex={0}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              Expired
            </div>
          </ListColumn>
        </div>
      </ListRow>
      <ListRow
        cursor="auto"
        data={
          Object {
            "expiryDate": "05 Feb 2017",
            "issuingOrganisation": "Western Australia Gov.",
            "name": "Green Card",
            "status": "Current",
          }
        }
        handleClick={[Function]}
        hideRow={false}
        index={1}
        key="test-smart-list-list-row-1"
      >
        <div
          className="item-row cursor-auto grid-x grid-padding-x"
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={0}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header=""
            isHeader={false}
            key="test-smart-list-list-item-1-0"
            rowIndex={1}
            size={6}
          >
            <div
              className="list-column cell small-6"
            >
              <div>
                <b>
                  Green Card
                </b>
                <div>
                  Western Australia Gov.
                </div>
              </div>
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={1}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header=""
            isHeader={false}
            key="test-smart-list-list-item-1-1"
            rowIndex={1}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              05 Feb 2017
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={2}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header=""
            isHeader={false}
            key="test-smart-list-list-item-1-2"
            rowIndex={1}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              Current
            </div>
          </ListColumn>
        </div>
      </ListRow>
    </div>
  </div>
</SmartList>
`;

exports[`<SmartList /> should render an Smart List displaying the right data with the right headers 1`] = `
<SmartList
  cursor="auto"
  data={
    Array [
      Object {
        "expiryDate": "11 Nov 2004",
        "issuingOrganisation": "Queensland Gov.",
        "name": "Blue Card",
        "status": "Expired",
      },
      Object {
        "expiryDate": "05 Feb 2017",
        "issuingOrganisation": "Western Australia Gov.",
        "name": "Green Card",
        "status": "Current",
      },
    ]
  }
  emptyListText="No Results found."
  hideHeaderOnSmall={false}
  id="test-smart-list"
  limit={5}
  loading={false}
  showHeaderRow={true}
  showHoverBg={true}
>
  <div
    className="SmartList smart-list hover-bg"
  >
    <div
      className="header-row grid-x grid-padding-x"
    >
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={0}
        data={
          Array [
            Object {
              "expiryDate": "11 Nov 2004",
              "issuingOrganisation": "Queensland Gov.",
              "name": "Blue Card",
              "status": "Expired",
            },
            Object {
              "expiryDate": "05 Feb 2017",
              "issuingOrganisation": "Western Australia Gov.",
              "name": "Green Card",
              "status": "Current",
            },
          ]
        }
        header="Qualification"
        isHeader={true}
        key="test-smart-list-list-item-0-0"
        rowIndex={0}
        size={6}
      >
        <div
          className="list-column cell small-6"
        >
          <ListHeader
            label="Qualification"
          >
            <span
              className="ListHeader"
            >
              Qualification
            </span>
          </ListHeader>
        </div>
      </ListColumn>
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={1}
        data={
          Array [
            Object {
              "expiryDate": "11 Nov 2004",
              "issuingOrganisation": "Queensland Gov.",
              "name": "Blue Card",
              "status": "Expired",
            },
            Object {
              "expiryDate": "05 Feb 2017",
              "issuingOrganisation": "Western Australia Gov.",
              "name": "Green Card",
              "status": "Current",
            },
          ]
        }
        header="Expiry Date"
        isHeader={true}
        key="test-smart-list-list-item-0-1"
        rowIndex={0}
        size={3}
      >
        <div
          className="list-column cell small-3"
        >
          <ListHeader
            label="Expiry Date"
          >
            <span
              className="ListHeader"
            >
              Expiry Date
            </span>
          </ListHeader>
        </div>
      </ListColumn>
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={2}
        data={
          Array [
            Object {
              "expiryDate": "11 Nov 2004",
              "issuingOrganisation": "Queensland Gov.",
              "name": "Blue Card",
              "status": "Expired",
            },
            Object {
              "expiryDate": "05 Feb 2017",
              "issuingOrganisation": "Western Australia Gov.",
              "name": "Green Card",
              "status": "Current",
            },
          ]
        }
        header="Status"
        isHeader={true}
        key="test-smart-list-list-item-0-2"
        rowIndex={0}
        size={3}
      >
        <div
          className="list-column cell small-3"
        >
          <ListHeader
            label="Status"
          >
            <span
              className="ListHeader"
            >
              Status
            </span>
          </ListHeader>
        </div>
      </ListColumn>
    </div>
    <div
      className="smart-list-rows"
    >
      <ListRow
        cursor="auto"
        data={
          Object {
            "expiryDate": "11 Nov 2004",
            "issuingOrganisation": "Queensland Gov.",
            "name": "Blue Card",
            "status": "Expired",
          }
        }
        handleClick={[Function]}
        hideRow={false}
        index={0}
        key="test-smart-list-list-row-0"
      >
        <div
          className="item-row cursor-auto grid-x grid-padding-x"
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={0}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header="Qualification"
            isHeader={false}
            key="test-smart-list-list-item-0-0"
            rowIndex={0}
            size={6}
          >
            <div
              className="list-column cell small-6"
            >
              <div>
                <b>
                  Blue Card
                </b>
                <div>
                  Queensland Gov.
                </div>
              </div>
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={1}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header="Expiry Date"
            isHeader={false}
            key="test-smart-list-list-item-0-1"
            rowIndex={0}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              11 Nov 2004
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={2}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header="Status"
            isHeader={false}
            key="test-smart-list-list-item-0-2"
            rowIndex={0}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              Expired
            </div>
          </ListColumn>
        </div>
      </ListRow>
      <ListRow
        cursor="auto"
        data={
          Object {
            "expiryDate": "05 Feb 2017",
            "issuingOrganisation": "Western Australia Gov.",
            "name": "Green Card",
            "status": "Current",
          }
        }
        handleClick={[Function]}
        hideRow={false}
        index={1}
        key="test-smart-list-list-row-1"
      >
        <div
          className="item-row cursor-auto grid-x grid-padding-x"
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={0}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header="Qualification"
            isHeader={false}
            key="test-smart-list-list-item-1-0"
            rowIndex={1}
            size={6}
          >
            <div
              className="list-column cell small-6"
            >
              <div>
                <b>
                  Green Card
                </b>
                <div>
                  Western Australia Gov.
                </div>
              </div>
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={1}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header="Expiry Date"
            isHeader={false}
            key="test-smart-list-list-item-1-1"
            rowIndex={1}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              05 Feb 2017
            </div>
          </ListColumn>
          <ListColumn
            alignRight={false}
            cell={[Function]}
            colIndex={2}
            data={
              Array [
                Object {
                  "expiryDate": "11 Nov 2004",
                  "issuingOrganisation": "Queensland Gov.",
                  "name": "Blue Card",
                  "status": "Expired",
                },
                Object {
                  "expiryDate": "05 Feb 2017",
                  "issuingOrganisation": "Western Australia Gov.",
                  "name": "Green Card",
                  "status": "Current",
                },
              ]
            }
            header="Status"
            isHeader={false}
            key="test-smart-list-list-item-1-2"
            rowIndex={1}
            size={3}
          >
            <div
              className="list-column cell small-3"
            >
              Current
            </div>
          </ListColumn>
        </div>
      </ListRow>
    </div>
  </div>
</SmartList>
`;

exports[`<SmartList /> should render an empty Smart List displaying the right data empty list text 1`] = `
<SmartList
  cursor="auto"
  data={Array []}
  emptyListText="No Results found."
  hideHeaderOnSmall={false}
  id="test-smart-list"
  limit={5}
  loading={false}
  showHeaderRow={true}
  showHoverBg={true}
>
  <div
    className="SmartList smart-list hover-bg"
  >
    <div
      className="header-row grid-x grid-padding-x"
    >
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={0}
        data={Array []}
        header=""
        isHeader={true}
        key="test-smart-list-list-item-0-0"
        rowIndex={0}
        size={6}
      >
        <div
          className="list-column cell small-6"
        >
          <ListHeader
            label=""
          />
        </div>
      </ListColumn>
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={1}
        data={Array []}
        header=""
        isHeader={true}
        key="test-smart-list-list-item-0-1"
        rowIndex={0}
        size={3}
      >
        <div
          className="list-column cell small-3"
        >
          <ListHeader
            label=""
          />
        </div>
      </ListColumn>
      <ListColumn
        alignRight={false}
        cell={[Function]}
        colIndex={2}
        data={Array []}
        header=""
        isHeader={true}
        key="test-smart-list-list-item-0-2"
        rowIndex={0}
        size={3}
      >
        <div
          className="list-column cell small-3"
        >
          <ListHeader
            label=""
          />
        </div>
      </ListColumn>
    </div>
    <div
      className="smart-list-rows"
    >
      <Callout
        justifyCenter={false}
        messages={Array []}
        shouldFocus={false}
        type=""
      >
        <div
          className="callout"
        >
          <div
            className="content"
          >
            No Results found.
          </div>
        </div>
      </Callout>
    </div>
  </div>
</SmartList>
`;
